...
                    android:id="@+id/tab1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/checkbox_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:onClick="checkboxClicked"
                        android:text="MyCheckBox"
                        tools:layout_margin="10dp" />
...
                        android:layout_height="2dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="?android:attr/listDivider" />

                    <Switch
                        android:id="@+id/switch_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:onClick="switchClicked"
                        android:text=" Switch" />

...
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:onClick="radioButtonClicked"
                            android:text="MyRadioButton1" />

                        <RadioButton
                            android:id="@+id/radio_button2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="radioButtonClicked"
                            android:text="MyRadioButton2" />
                    </RadioGroup>

...
                        android:layout_height="2dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="?android:attr/listDivider" />

                    <ToggleButton
                        android:id="@+id/toggle_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:onClick="toggleButtonClicked"
                        android:text="ToggleButton" />

...
                    android:id="@+id/tab2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <SeekBar
                        android:id="@+id/seekBar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_marginTop="50dp" />

                    <View
...
                        android:layout_height="2dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:background="?android:attr/listDivider" />

                    <RatingBar
                        android:id="@+id/ratingBar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:numStars="5" />

                    <View
...
                        android:layout_height="2dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="?android:attr/listDivider" />

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:onClick="imageViewClicked"
                        app:srcCompat="@mipmap/ic_launcher"
                        tools:layout_gravity="center" />
...
                        android:layout_height="2dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="?android:attr/listDivider" />

                    <Button
                        android:id="@+id/button_show_timepicker"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:onClick="showTimePickerDialog"
                        android:text="@string/button_timepicker" />

                    <Button
                        android:id="@+id/button_show_datepicker"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:onClick="showDatePickerDialog"
                        android:text="Show Date Picker" />

...
