<resources>
    <string name="app_name">ThinkingDataDemo</string>
    <string name="edit_username">Enter your user name</string>
    <string name="button_login">Login</string>
    <string name="button_logout">Logout</string>
    <string name="button_fragment">Fragment and ListView Test</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_setsuperprop">Set Super Properties</string>
    <string name="button_setautoeventprop">Set Auto Event Prop</string>
    <string name="button_unsetchannel">Unset Channel</string>
    <string name="button_unsetall">Unset All</string>
...
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_webview">WebView Test</string>
    <string name="button_crash_test">Crash Test</string>
    <string name="title_activity_webview">WebviewActivity</string>
    <string name="dialog_message">用户名不能为空</string>
    <string name="dialog_title">Invalid Input</string>
    <string name="ok">OK</string>
    <string name="button_track">Track test event</string>
    <string name="button_flush">Flush</string>
    <string name="title_activity_click_test">ClickTestActivity</string>
    <string name="button_click">Click test</string>
    <string name="button_timepicker">Select Time</string>
    <string name="button_multichoice_dialog">Test MultiChoice Dialog</string>
...
